Fix protocol 3 layout spacing

--- a/frontend/src/styles/mainframe-core.css
+++ b/frontend/src/styles/mainframe-core.css
@@ -1,4 +1,6 @@
 .mainframe-core {
+  --core-scale:1;
+
   position:absolute;
   left:50%;
   top:50%;
@@ -7,7 +9,8 @@
   height:360px;
 
   transform:
-    translate(-50%, -50%);
+    translate(-50%, -50%)
+    scale(var(--core-scale));
 
   display:flex;
   justify-content:center;
@@ -137,12 +140,14 @@
   0%,100% {
     transform:
       translate(-50%, -50%)
-      translateY(0px);
+      translateY(0px)
+      scale(var(--core-scale));
   }
 
   50% {
     transform:
       translate(-50%, -50%)
-      translateY(-10px);
+      translateY(-10px)
+      scale(var(--core-scale));
   }
 }
